# fatx-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh  setup.sh
.agent/: agent.sh
.claude/rules/: file-hygiene.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  release.yml
fatx-mkimage/: Cargo.toml
fatx-mkimage/src/: main.rs
fatx-mount/: Cargo.toml
fatx-mount/src/: main.rs
fatxlib/: Cargo.toml  build.rs
fatxlib/examples/: check_profile.rs  iso2god.rs  list_xiso.rs
fatxlib/src/: content_types.rs  display.rs  error.rs  lib.rs  partition.rs  platform.rs  types.rs  volume.rs
fatxlib/src/executable/: mod.rs
fatxlib/src/iso/: compact.rs  extract.rs  mod.rs  policy.rs
fatxlib/src/iso/god/: con_header.rs  convert.rs  core.rs  hash_list.rs  mod.rs  prepare.rs
fatxlib/src/iso2god/: convert.rs  mod.rs
fatxlib/src/iso2god/executable/: mod.rs  xbe.rs  xex.rs
fatxlib/src/iso2god/god/: con_header.rs  file_layout.rs  hash_list.rs  mod.rs
fatxlib/src/titles/: dynamic.rs  file_cache.rs  mod.rs  user_cache.rs
fatxlib/src/xiso/: mod.rs
fatxlib/src/xuids/: account.rs  mod.rs  profile_cache.rs
fatxlib/tests/: fixture_test.rs  folder_display.rs  integration.rs  iso2god_roundtrip.rs  optimization.rs  roundtrip.rs  stats.rs  stfs_parser.rs  title_lookup.rs  xiso_reader.rs
fatxlib/tests/common/: mod.rs
fatxlib/tests/fixtures/: tiny.xiso
src/: main.rs  mkimage.rs  tui.rs
src/mount/: mod.rs
tests/: cli_integration.rs
