[package]
name = "fatx-mkimage"
version = "0.2.0"
edition = "2021"
description = "Create blank FATX/XTAF disk images for testing"
license = "Apache-2.0"
repository = "https://github.com/joshuareisbord/fatx-rs"

[[bin]]
name = "fatx-mkimage"
path = "src/main.rs"

[dependencies]
fatxlib = { path = "../fatxlib" }
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
