[package]
name = "fatxlib"
version = "0.2.0"
edition = "2021"
description = "A Rust library for reading and writing Xbox FATX file systems"
license = "Apache-2.0"
repository = "https://github.com/joshuareisbord/fatx-rs"

[dependencies]
thiserror = "2"
bitflags = "2"
time = "0.3"
log = "0.4"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["fs", "ioctl"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
